[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "json-lab"
version = "0.1.0"
[tool.poetry.dependencies]
colorama = "^0.4.3"
emoji = "^0.5.4"
pyfiglet = "^0.8.0"
python = "^3.8"
termcolor = "^1.1"
[tool.poetry.dev-dependencies]
